--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "leaflet-searchbox",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "module": "dist/leaflet.searchbox.esm.js",
   "browser": "dist/leaflet.searchbox.umd.js",
   "repository": {
@@ -16,8 +16,19 @@
   },
   "homepage": "https://github.com/bung87/leaflet-searchbox#readme",
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-plugin-fast-async": "^6.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-power-assert": "^3.0.0",
     "postcss-sprites": "^4.2.1",
     "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-postcss": "^1.6.2"
@@ -32,7 +43,10 @@
     "dist"
   ],
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.1.2",
     "bean": "^1.0.15",
-    "leaflet": "^1.3.4"
+    "leaflet": "^1.3.4",
+    "leaflet-geosearch": "github:bung87/leaflet-geosearch#develop"
   }
 }
