--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-arrow-functions": "^7.0.0",
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
+    "@babel/plugin-transform-classes": "^7.1.0",
+    "@babel/plugin-transform-function-name": "^7.1.0",
+    "@babel/plugin-transform-parameters": "^7.1.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "babel-plugin-fast-async": "^6.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-power-assert": "^3.0.0",
-    "babel-preset-stage-2": "^6.24.1",
     "postcss-sprites": "^4.2.1",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
