--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "pretest": "npm run build"
   },
   "files": [
-    "dist"
+    "dist",
+    "lib",
+    "src"
   ],
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
