--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "rollup-plugin-postcss": "^1.6.2"
   },
   "scripts": {
-    "example": "parcel build examples/index.html",
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "rollup -c;parcel build examples/index.html",
+    "dev": "rollup -c -w | parcel examples/index.html",
+    "ghpage":"rm -rf dist;npm run build;git checkout gh-pages;git rm demo.*;cp -r dist/* .;git add demo.*;git commit -m 'update page';git push",
     "test": "node test/test.js",
     "pretest": "npm run build"
   },
