--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "build": "rollup -c;parcel build examples/index.html",
     "dev": "rollup -c -w | parcel examples/index.html",
-    "ghpage":"rm -rf dist;npm run build;git checkout gh-pages;git rm demo.*;cp -r dist/* .;git add demo.*;git commit -m 'update page';git push",
+    "ghpage":"sh ghpage.sh",
     "test": "node test/test.js",
     "pretest": "npm run build"
   },
