--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
-    "postcss-sprites": "github:bung87/postcss-sprites#master",
+    "postcss-sprites": "^4.2.1",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -37,7 +37,7 @@
   "scripts": {
     "build": "rollup -c;parcel build examples/index.html",
     "dev": "rollup -c -w | parcel examples/index.html",
-    "ghpage":"sh ghpage.sh",
+    "ghpage": "sh ghpage.sh",
     "test": "node test/test.js",
     "pretest": "npm run build"
   },
