--- a/package.json
+++ b/package.json
@@ -17,16 +17,10 @@
   "homepage": "https://github.com/bung87/leaflet-searchbox#readme",
   "devDependencies": {
     "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-arrow-functions": "^7.0.0",
-    "@babel/plugin-transform-async-to-generator": "^7.1.0",
-    "@babel/plugin-transform-classes": "^7.1.0",
-    "@babel/plugin-transform-function-name": "^7.1.0",
-    "@babel/plugin-transform-parameters": "^7.1.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/plugin-transform-template-literals": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "bean": "github:bung87/bean#master",
+    "leaflet": "^1.3.4",
+    "parcel": "^1.12.4",
     "postcss-sprites": "^4.2.1",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
@@ -35,11 +29,11 @@
     "rollup-plugin-postcss": "^1.6.2"
   },
   "scripts": {
-    "build": "rollup -c;parcel build examples/index.html",
-    "dev": "rollup -c -w | parcel examples/index.html",
+    "build": "rollup -c;parcel build -d build examples/index.html",
+    "dev": "rollup -c -w | parcel -d build examples/index.html",
     "ghpage": "sh ghpage.sh",
     "test": "node test/test.js",
-    "pretest": "npm run build"
+    "pretest": "yarn run build"
   },
   "files": [
     "dist",
@@ -47,10 +41,6 @@
     "src"
   ],
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@babel/runtime": "^7.1.2",
-    "bean": "github:bung87/bean#master",
-    "leaflet": "^1.3.4",
     "leaflet-geosearch": "github:bung87/leaflet-geosearch#develop"
   }
 }
