--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.1.0",
     "bean": "github:bung87/bean#master",
     "leaflet": "^1.3.4",
+    "node-sass": "^4.13.0",
     "parcel": "^1.12.4",
     "postcss-sprites": "^4.2.1",
     "rollup": "^0.66.6",
@@ -29,8 +30,9 @@
     "rollup-plugin-postcss": "^1.6.2"
   },
   "scripts": {
-    "build": "rollup -c;parcel build -d build examples/index.html",
-    "dev": "rollup -c -w | parcel -d build examples/index.html",
+    "dist": "rollup -c",
+    "build":"parcel build -d build/examples examples/index.html",
+    "dev": "rollup -c -w | parcel -d build/examples examples/index.html",
     "ghpage": "sh ghpage.sh",
     "test": "node test/test.js",
     "pretest": "yarn run build"
