--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
+    "@rollup/plugin-json": "^4.0.0",
     "bean": "github:bung87/bean#master",
     "leaflet": "^1.3.4",
     "node-sass": "^4.13.0",
