update postcss-sprites to my fork version as it use svg-sprites which using deprecated  phantomjs as dependency,fix #1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-searchbox",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A google map style search box which includes a side panel slider control.",
   "main": "lib/index.js",
   "module": "dist/leaflet.searchbox.esm.js",
@@ -21,9 +21,9 @@
     "@rollup/plugin-json": "^4.0.0",
     "bean": "github:bung87/bean#master",
     "leaflet": "^1.3.4",
-    "node-sass": "^4.13.0",
+    "sass": "^1.23.3",
     "parcel": "^1.12.4",
-    "postcss-sprites": "^4.2.1",
+    "postcss-sprites": "https://github.com/bung87/postcss-sprites/archive/v4.2.1a.tar.gz",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
