--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-searchbox",
-  "version": "1.0.4b",
+  "version": "1.0.5",
   "description": "A google map style search box which includes a side panel slider control.",
   "main": "lib/index.js",
   "module": "dist/leaflet.searchbox.esm.js",
@@ -23,20 +23,21 @@
     "leaflet": "^1.3.4",
     "sass": "^1.23.3",
     "parcel": "^1.12.4",
-    "postcss-sprites": "https://github.com/bung87/postcss-sprites/releases/download/v4.2.1e/postcss-sprites-4.2.1.tgz",
-    "rollup": "^0.66.6",
+    "@bung87/postcss-sprites": "^4.2.2",
+    "rollup": "^1.27.8",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-postcss": "^1.6.2"
+    "@bung87/rollup-plugin-postcss": "^2.0.4"
   },
   "scripts": {
     "dist": "rollup -c",
+    "watch": "rollup -w -c",
     "build": "parcel build -d build/examples examples/index.html",
     "start": "parcel -d build/examples examples/index.html",
     "ghpage": "sh ghpage.sh",
     "test": "node test/test.js",
-    "pretest": "yarn run build"
+    "prepublishOnly": "yarn dist"
   },
   "files": [
     "dist",
